# comp-phys-26

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: Birth Data Exploration.ipynb  Boltzmann and Ising (and some Metropolis).ipynb  Coin Flipping w Numpyro.ipynb  Intro to NumPyro.ipynb  Intro to Regression.ipynb  Intro to Sampling.ipynb  Solar Neighborhood w Gaia.ipynb
