[project]
name = "comp-phys-26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=1.0.0",
    "ipykernel>=7.2.0",
    "jax[cpu]<=0.8.2",
    "jaxlib<=0.8.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "numpyro[cpu]>=0.20.1",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
